--- a/CompanyEmployees/appsettings.json
+++ b/CompanyEmployees/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+    "ConnectionStrings": {
+      "sqlConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CompanyEmployee;Trusted_Connection=True;MultipleActiveResultSets=true"
+    
+  }
 }
